--- a/HealthcareSystem/Views/Patients/Index.cshtml
+++ b/HealthcareSystem/Views/Patients/Index.cshtml
@@ -1,1 +1,42 @@
-﻿
+﻿@model HealthcareSystem.ViewModel.Patients.IndexVM
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-12">
+            <h2>Patient Listing</h2>
+            <a class="btn btn-primary" href="/Patients/Add">Add new patient</a>
+            <table class="table table-bordered mt-3">
+                <thead>
+                    <tr>
+                        <th>First Name</th>
+                        <th>Last Name</th>
+                        <th>Age</th>
+                        <th>Gender</th>
+                        <th>Illnes</th>
+                        <th>Doctor</th>
+                        <th>Hospital</th>
+                    </tr>
+                </thead>
+                @foreach (var item in Model.Patients)
+                {
+                    <tbody>
+                        <tr>
+                            <td>@item.FirstName</td>
+                            <td>@item.LastName</td>
+                            <td>@item.Age</td>
+                            <td>@item.Gender</td>
+                            <td>@item.Illnes</td>
+                            <td>@item.Doctor.FirstName  @item.Doctor.LastName</td>
+                            <td>@item.Hospital.Name</td>
+                            <td>
+                                <a class="btn btn-primary btn-sm" href="/Patients/Edit?id=@item.Id">Edit</a>
+                                <a class="btn btn-danger btn-sm" href="/Patients/Delete?id=@item.Id">Delete</a>
+                            </td>
+                        </tr>
+                    </tbody>
+                }
+
+            </table>
+        </div>
+    </div>
+</div>
