--- a/HealthcareSystem/Views/Patients/Edit.cshtml
+++ b/HealthcareSystem/Views/Patients/Edit.cshtml
@@ -1,10 +1,12 @@
-﻿@model HealthcareSystem.ViewModel.Patients.AddPatientVM
+﻿@model HealthcareSystem.ViewModel.Patients.EditVM
 @{
-	this.ViewData["Title"] = "Add new patient";
+	this.ViewData["Title"] = "Edit patient";
 }
-<form method="post" class="col-md-6 offset-md-3" action="/Patients/Add">
+<form method="post" class="col-md-6 offset-md-3" action="/Patients/Edit">
 	<h1>@this.ViewData["Title"]</h1>
 	<div asp-validation-summary="All" class="text-danger"></div>
+	@Html.HiddenFor(m=>m.Id)
+	@Html.HiddenFor(m=>m.DoctorId)
 	<div class="form-group">
 		<label asp-for="FirstName"></label>
 		<input asp-for="FirstName" class="form-control" />
@@ -36,15 +38,14 @@
 		<span asp-validation-for="Illnes" class="text-danger"></span>
 	</div>
 	<div class="form-group">
-		<label asp-for="HospitalId">Hospital</label>
+		<label asp-for="HospitalId"></label>
 		<select asp-for="HospitalId" class="form-control">
-			 @foreach (var item in Model.Hospitals)
+			@foreach (var item in Model.Hospitals)
 			{
-			<option value="@item.Id">@item.Name</option>
+				<option value="@item.Id">@item.Name</option>
 			}
 		</select>
 	</div>
 	<br />
-	<input type="submit" class="btn btn-primary" value="Next" />
+	<input type="submit"  class="btn btn-primary" value="Next" />
 </form>
-
