--- a/HealthcareSystem/Views/Shared/_Layout.cshtml
+++ b/HealthcareSystem/Views/Shared/_Layout.cshtml
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Patients" asp-action="Index">Patients</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Hospitals" asp-action="Index">Hospitals</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
