Added authorization. Maked design with bootstrap and css

--- a/HealthcareSystem/Views/Home/Index.cshtml
+++ b/HealthcareSystem/Views/Home/Index.cshtml
@@ -2,7 +2,46 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="jumbotron text-center">
+    <h1 class="display-4">Welcome to the Healthcare System</h1>
+    <p class="lead">Confidential Access for High-Ranking Health Officials</p>
 </div>
+
+<section id="our-story" class="container feature">
+    <h2 class="text-center mb-4">Our Story</h2>
+    <p class="text-center mb-4">In a world where the well-being of communities is paramount, the Healthcare System emerged as a beacon of innovation and dedication...</p>
+</section>
+
+<!-- Features Section -->
+<section id="features" class="container feature">
+    <div class="row">
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="~/images/HosAdm.jpg" class="card-img-top" alt="Hospital Administration">
+                <div class="card-body">
+                    <h3 class="text-center mb-3">Hospital Administration</h3>
+                    <p class="text-center">Efficiently manage hospital operations and resources.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="~/images/Doc.jpg" class="card-img-top" alt="Doctor Information">
+                <div class="card-body">
+                    <h3 class="text-center mb-3">Doctor Information</h3>
+                    <p class="text-center">Access and update doctor profiles and schedules.</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="~/images/Patients.jpg" class="card-img-top" alt="Patient Records">
+                <div class="card-body">
+                    <h3 class="text-center mb-3">Patient Records</h3>
+                    <p class="text-center">Securely handle and organize patient information.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
