Added background for the whole app. Added more details.

--- a/HealthcareSystem/Views/Hospitals/Index.cshtml
+++ b/HealthcareSystem/Views/Hospitals/Index.cshtml
@@ -12,6 +12,8 @@
                         <th>Country</th>
                         <th>Doctors Count</th>
                         <th>Patient Count</th>
+                        <th>Picture</th>
+                        <th></th>
                     </tr>
                 </thead>
                 @foreach (var item in Model.Hospitals)
