--- a/HealthcareSystem/wwwroot/css/mycss.css
+++ b/HealthcareSystem/wwwroot/css/mycss.css
@@ -213,7 +213,11 @@ body {
     background-color: var(--bs-body-bg);
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background-image: url('/images/pexels-johannes-plenio-1103970.jpg');
+    background-size: cover; /* Adjust to cover the entire viewport */
+    background-repeat: no-repeat;
 }
+
 
 hr {
     margin: 1rem 0;
