--- a/HealthcareSystem/Views/Home/Index.cshtml
+++ b/HealthcareSystem/Views/Home/Index.cshtml
@@ -29,7 +29,7 @@
                 <img src="~/images/Doc.jpg" class="card-img-top" alt="Doctor Information">
                 <div class="card-body">
                     <h3 class="text-center mb-3">Doctor Information</h3>
-                    <p class="text-center">Access and update doctor profiles and schedules.</p>
+                    <p class="text-center">Access and update doctor profile.</p>
                 </div>
             </div>
         </div>
