--- a/HealthcareSystem/Views/Shared/_Layout.cshtml
+++ b/HealthcareSystem/Views/Shared/_Layout.cshtml
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - Healthcare System</title>
     <link rel="stylesheet" href="~/css/mycss.css"/>
+    <link rel="stylesheet" href="~/css/snow.css"/>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HealthcareSystem.styles.css" asp-append-version="true" />
 </head>
 <body>
+    <div id="snow"></div>
     <header>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
@@ -50,6 +52,7 @@
             &copy; 2023 - Healthcare System - By - <a style="color: white" href="https://linktr.ee/martinz17"> Martin Zdravkov</a>
         </div>
     </footer>
+    <script src="~/js/site.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
