--- a/HealthcareSystem/Views/Home/Index.cshtml
+++ b/HealthcareSystem/Views/Home/Index.cshtml
@@ -1,47 +1,107 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+	ViewData["Title"] = "Home Page";
 }
 
 <div class="jumbotron text-center">
-    <h1 class="display-4">Welcome to the Healthcare System</h1>
-    <p class="lead">Confidential Access for High-Ranking Health Officials</p>
+	<h1 class="display-4">Welcome to the Healthcare System</h1>
+	<p class="lead">Confidential Access for High-Ranking Health Officials</p>
 </div>
 
 <section id="our-story" class="container feature">
-    <h2 class="text-center mb-4">Our Story</h2>
-    <p class="text-center mb-4">In a world where the well-being of communities is paramount, the Healthcare System emerged as a beacon of innovation and dedication...</p>
+	<h2 class="text-center mb-4">Our Story</h2>
+	<p class="text-center mb-4">In a world where the well-being of communities is paramount, the Healthcare System emerged as a beacon of innovation and dedication...</p>
 </section>
 
 <!-- Features Section -->
 <section id="features" class="container feature">
-    <div class="row">
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <img src="~/images/HosAdm.jpg" class="card-img-top" alt="Hospital Administration">
-                <div class="card-body">
-                    <h3 class="text-center mb-3">Hospital Administration</h3>
-                    <p class="text-center">Efficiently manage hospital operations and resources.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <img src="~/images/Doc.jpg" class="card-img-top" alt="Doctor Information">
-                <div class="card-body">
-                    <h3 class="text-center mb-3">Doctor Information</h3>
-                    <p class="text-center">Access and update doctor profile.</p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 mb-4">
-            <div class="card">
-                <img src="~/images/Patients.jpg" class="card-img-top" alt="Patient Records">
-                <div class="card-body">
-                    <h3 class="text-center mb-3">Patient Records</h3>
-                    <p class="text-center">Securely handle and organize patient information.</p>
-                </div>
-            </div>
-        </div>
-    </div>
+	<div class="row">
+		<div class="col-md-4 mb-4">
+			<div class="card">
+				<img src="~/images/HosAdm.jpg" class="card-img-top" alt="Hospital Administration">
+				<div class="card-body">
+					<h3 class="text-center mb-3">Hospital Administration</h3>
+					<p class="text-center">Efficiently manage hospital operations and resources.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 mb-4">
+			<div class="card">
+				<img src="~/images/Doc.jpg" class="card-img-top" alt="Doctor Information">
+				<div class="card-body">
+					<h3 class="text-center mb-3">Doctor Information</h3>
+					<p class="text-center">Access and update doctor profile.</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-4 mb-4">
+			<div class="card">
+				<img src="~/images/Patients.jpg" class="card-img-top" alt="Patient Records">
+				<div class="card-body">
+					<h3 class="text-center mb-3">Patient Records</h3>
+					<p class="text-center">Securely handle and organize patient information.</p>
+				</div>
+			</div>
+		</div>
+	</div>
 </section>
 
+<hr />
+<div class="accordion" id="accordionExample">
+	<div class="accordion-item">
+		<h2 class="accordion-header">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+				Healthcare System Overview
+			</button>
+		</h2>
+		<div id="collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<strong>Doctors:</strong>
+				<ul>
+					<li>Access a network of highly skilled and compassionate doctors.</li>
+					<li>Find specialists in various fields to meet your healthcare needs.</li>
+					<li>Edit doctor profiles and manage him.</li>
+				</ul>
+
+				<strong>Patients:</strong>
+				<ul>
+					<li>View medical records.</li>
+					<li>Access personalized health information and receive updates on your treatment plans.</li>
+					<li>User-friendly platform empowering patients to take control of their healthcare journey.</li>
+				</ul>
+
+				<strong>Hospitals:</strong>
+				<ul>
+					<li>Explore our network of affiliated hospitals equipped with state-of-the-art facilities.</li>
+					<li>Locate hospitals, check available services, and learn about their quality standards.</li>
+					<li>Collaborate with healthcare professionals and hospitals for comprehensive and efficient care.</li>
+				</ul>
+			</div>
+		</div>
+	</div>
+	<div class="accordion-item">
+		<h2 class="accordion-header">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+				Services
+			</button>
+		</h2>
+		<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				Explore a wide range of healthcare services designed to meet the diverse needs of your community. From primary care to specialized treatments, we strive to deliver comprehensive and quality services to enhance your well-being.
+			</div>
+		</div>
+	</div>
+	<div class="accordion-item">
+		<h2 class="accordion-header">
+			<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+				Security
+			</button>
+		</h2>
+		<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+			<div class="accordion-body">
+				<p>
+					Ensuring the security of your health information is our top priority. Our system is built with robust security measures to safeguard your data. We adhere to strict protocols and use advanced technologies to provide a secure and confidential healthcare environment.
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
