--- a/HealthcareSystem/wwwroot/css/site.css
+++ b/HealthcareSystem/wwwroot/css/site.css
@@ -16,3 +16,29 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+/*.accordion-item {
+    background-color: #5F9EA0;
+}*/
+
+/*.accordion-header {
+    background-color: #5F9EA0;
+}*/
+
+/*.accordion-button {
+    background-color: #2c3e50;
+}
+
+accordion-header{
+    text-emphasis-color: white;
+}
+*/
+
+.accordion {
+    --bs-accordion-btn-bg: #fff;
+    --bs-accordion-active-bg: #909090;
+    --bs-accordion-active-color: #ffffff;
+    --bs-accordion-btn-focus-box-shadow: none;
+    --bs-accordion-bg: #ffff;
+    --bs-accordion-color: #000000;
+}
