Editing footer year

--- a/HealthcareSystem/Views/Home/Index.cshtml
+++ b/HealthcareSystem/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 	ViewData["Title"] = "Home Page";
 }
 
-<div class="jumbotron text-center">
+<div class="text-center">
 	<h1 class="display-4">Welcome to the Healthcare System</h1>
 	<p class="lead">Confidential Access for High-Ranking Health Officials</p>
 </div>
