--- a/HealthcareSystem/Views/Home/Index.cshtml
+++ b/HealthcareSystem/Views/Home/Index.cshtml
@@ -46,6 +46,7 @@
 </section>
 
 <hr />
+<!-- Accordion Section -->
 <div class="accordion" id="accordionExample">
 	<div class="accordion-item">
 		<h2 class="accordion-header">
