Improving table design

--- a/HealthcareSystem/Views/Doctors/Index.cshtml
+++ b/HealthcareSystem/Views/Doctors/Index.cshtml
@@ -5,7 +5,7 @@
 		<div class="col-md-12">
 			<h2>Doctor Listing</h2>
 			<a class="btn btn-primary" href="/Doctors/Add">Add new doctor</a>
-			<table class="table table-bordered mt-3">
+			<table class="table table-bordered table-hover mt-3">
 				<thead>
 					<tr>
 						<th>First Name</th>
