--- a/HealthcareSystem/Views/Hospitals/Index.cshtml
+++ b/HealthcareSystem/Views/Hospitals/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <h2>Hospitals</h2>
             <a class="btn btn-primary" href="/Hospitals/Add">Add new hospital</a>
-            <table class="table table-bordered mt-3">
+            <table class="table table-bordered table-hover mt-3">
                 <thead>
                     <tr>
                         <th>Hospital Name</th>
