--- a/HealthcareSystem/Views/Patients/Add2.cshtml
+++ b/HealthcareSystem/Views/Patients/Add2.cshtml
@@ -4,7 +4,7 @@
 	<div class="row">
 		<div class="col-md-12">
 			<h2>Choose doctor for patient @Model.FirstName @Model.LastName with diagnosis: @Model.Illnes</h2>
-			<table class="table table-bordered mt-3">
+			<table class="table table-bordered table-hover mt-3">
 				<thead>
 					<tr>
 						<th>First Name</th>
