--- a/HealthcareSystem/Views/Hospitals/PatientList.cshtml
+++ b/HealthcareSystem/Views/Hospitals/PatientList.cshtml
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-md-12">
             <h2>Patient Listing</h2>
-            <table class="table table-bordered mt-3">
+            <table class="table table-bordered table-hover mt-3">
                 <thead>
                     <tr>
                         <th>First Name</th>
