--- a/HealthcareSystem/Views/Patients/Edit2.cshtml
+++ b/HealthcareSystem/Views/Patients/Edit2.cshtml
@@ -11,7 +11,7 @@
 				<a class="btn btn-primary" href="/Patients/Index">Stay with current doctor</a>
 
 			}
-			<table class="table table-bordered mt-3">
+			<table class="table table-bordered table-hover mt-3">
 				<thead>
 					<tr>
 						<th>First Name</th>
