--- a/HealthcareSystem/Views/Patients/Index.cshtml
+++ b/HealthcareSystem/Views/Patients/Index.cshtml
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <h2>Patient Listing</h2>
             <a class="btn btn-primary" href="/Patients/Add">Add new patient</a>
-            <table class="table table-bordered mt-3">
+            <table class="table table-bordered table-hover mt-3">
                 <thead>
                     <tr>
                         <th>First Name</th>
