--- a/HealthcareSystem/Views/Shared/_Layout.cshtml
+++ b/HealthcareSystem/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="~/HealthcareSystem.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <div id="snow"></div>
+   @* <div id="snow"></div> *@
     <header>
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
             <div class="container-fluid">
